Added handling of ticket expiry
