# routes/ticket.js
@@ -5,6 +5,7 @@ const checkUserIdMW = require('../middlewares/authentication/checkUserId');
 const checkRequestParamsMW = require('../middlewares/general/checkRequestParams');
 const addTicketMW = require('../middlewares/ticket/addTicket');
 const getTicketDataMW = require('../middlewares/ticket/getTicketData');
+const getTicketExpiryMW = require('../middlewares/ticket/getTicketExpiry');
 const updateTicketDataMW = require('../middlewares/ticket/updateTicketData');
 const deleteTicketMW = require('../middlewares/ticket/deleteTicket');
 
@@ -18,6 +19,10 @@ router.post('/',
 
 router.get('/:ticketId',
 	getTicketDataMW()
+);
+
+router.get('/:ticketId/expiry',
+	getTicketExpiryMW()
 );
 
 router.post('/:ticketId',
